crates/reinhardt-core/crates/macros/tests/ui/path/fail/unmatched_closing_brace.rs
// Test: URL pattern with unmatched closing brace should fail

use reinhardt_macros::path;

fn main() {
    let pattern = path!("polls/id}/");
}
